Started working on Templates more

--- a/Store/Templates/Store/admin/books/details.html
+++ b/Store/Templates/Store/admin/books/details.html
@@ -1,5 +1,5 @@
 {% extends 'Store/layout.html' %}
 
 {% block content %}
-<h1 align="middle">Sup gets some books niggers</h1>
+<h1 align="middle">{{book.title}}</h1>
 {% endblock %}
