--- a/Store/Templates/Store/layout.html
+++ b/Store/Templates/Store/layout.html
@@ -5,14 +5,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-   UA-Compatible" content="ie=edge">
     <link href="{% static "css/materialize.min.css" %}" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="{% static "css/mainstyle.css" %}" type="text/css" rel="stylesheet">
     <title>Bookstore</title>
 </head>
+<nav>
+    <div class="nav-wrapper teal">
+    <a href="#" class="brand-logo">Bookish</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="">Login</a></li>
+        <li><a href="">Register</a></li>
+        <li><a href=""></a></li>
+    </ul>
+    </div>
+</nav>
 <body>
-    <header class="container center-align teal">
-        Bookish Bro
-    </header>
     <div class="container">
         {% block content %}
         {% endblock %}
