--- a/Store/Templates/Store/admin/books/details.html
+++ b/Store/Templates/Store/admin/books/details.html
@@ -1,5 +1,28 @@
 {% extends 'Store/layout.html' %}
 
 {% block content %}
-<h1 align="middle">{{book.title}}</h1>
+<div class="row">
+    <div class="col s12">
+        <h3>{{book.title}}</h3> 
+    </div>
+    <div class="col s6">
+        <h1>Image here</h1>
+    </div>
+    <div class="col s6">
+        <div class="card">
+            <div class="card-content">
+                <!--<span class="card-title">Card Title</span>-->
+                <p>
+                    Author: {{book.author.last_name}}, {{book.author.first_name}}<br>
+                    ISBN10: {{book.isbn10}}<br>
+                    ISBN13: {{book.isbn13}}<br>
+                    Copyright: {{book.copyRightDate}}<br>
+                </p>
+            </div>
+            <div class="card-action">
+                <a href="#">Edit</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
