--- a/Store/Templates/Store/admin/books/books.html
+++ b/Store/Templates/Store/admin/books/books.html
@@ -1,5 +1,6 @@
 {% extends 'Store/layout.html' %}
 {% load staticfiles %}
+{% load widget_tweaks %}
 
 {% block content %}
 <table>
@@ -19,6 +20,7 @@
         </tr>
     {% endfor %}
     </tbody>
+    <h4>{{ text }}</h4>
 </table>
 
 <div class="fixed-action-btn">
@@ -28,81 +30,85 @@
 </div>
 
 <div id="addbook" class="modal">
-    <div class="modal-content">
-        <h4>Add Book</h4>
-        <div class="row">
-            <form action="" class="col s12">            
-                <div class="row">
-                    <div class="input-field col s12">
-                        <input id="book_title" type="text" class="validate">
-                        <label for="book_title">Book Title</label>
-                    </div>
-                </div>
+    <form action="" method="POST" class="col s12">
+    {% csrf_token %}
+    {{ form.non_field_errors }}            
+        <div class="modal-content">
+            <h4>Add Book</h4>
+            <div class="row">            
                 <div class="row">
                     <div class="input-field col s6">
-                        <input id="author_first" type="text" class="validate">
-                        <label for="author_first">First Name</label>
+                        {{ form.title.errors }}
+                        <label for="{{ form.title.id_for_label }}">Book Title</label>
+                        {{ form.title }}
                     </div>
                     <div class="input-field col s6">
-                        <input id="author_last" type="text" class="validate">
-                        <label for="author_last">Last Name</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s6">
-                        <input id="isbn_10" type="text" data-length="10" class="validate">
-                        <label for="isbn_10">ISBN10</label>
-                    </div>
-                    <div class="input-field col s6">
-                        <input id="isbn_13" type="text" data-length="13" class="validate">
-                        <label for="isbn_13">ISBN13</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s4">
-                        <input id="cprt_date" type="text" class="datepicker">
-                        <label for="cprt_date">Copyright Date</label>
-                    </div>
-                    <div class="input-field col s4">
-                        <input id="edition" type="number">
-                        <label for="edition">Edition</label>
-                    </div>
-                    <div class="input-field col s4">
-                        <select>
-                            <option value="" disabled selected>Choose a publisher</option>
-                            {% for publisher in publishers %}
-                            <option value="1">{{publisher.company_name}}</option>
+                        <!-- <select>
+                            {{ form.authors.errors }}
+                            <option value="" disabled selected>Choose an author</option>
+                            {% for author in form.authors.field.choices %}
+                            <option value="1">{{author.last_name}}, {{author.first_name}}</option>
                             {% endfor %}
-                        </select>
+                        </select> -->
+                        {{ form.authors.errors }}
+                        {{ form.authors }}
+                        <label>Author</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s6">
+                        {{ form.isbn10.errors }}
+                        <label for="{{ form.isbn10.id_for_label }}">ISBN10</label>
+                        {{ form.isbn10 }}
+                    </div>
+                    <div class="input-field col s6">
+                        {{ form.isbn13.errors }}
+                        <label for="{{ form.isbn13.id_for_label }}">ISBN13</label>
+                        {{ form.isbn13 }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s4">
+                        {{ form.copyright_date.errors }}
+                        <label for="{{ form.copyright_date.id_for_label }}">Copyright Date</label>
+                        {{ form.copyright_date|add_class:"datepicker" }}
+                    </div>
+                    <div class="input-field col s4">
+                        {{ form.edition.errors }}
+                        <label for="{{ form.edition.id_for_label }}">Edition</label>
+                        {{ form.edition }}
+                    </div>
+                    <div class="input-field col s4">
+                        {{ form.publishers.errors }}
+                        {{ form.publishers }}
                         <label>Publisher</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s4">
-                        <input id="book_type" type="text">
-                        <label for="book_type">Book Type</label>
+                        {{ form.book_type.errors }}
+                        <label for="{{ form.book_type.id_for_label }}">Book Type</label>
+                        {{ form.book_type }}
                     </div>
                     <div class="input-field col s4">
-                        <input id="num_pages" type="number">
-                        <label for="num_pages">Number of Pages</label>
+                        {{ form.num_pages.errors }}
+                        <label for="{{ form.num_pages.id_for_label }}">Number of Pages</label>
+                        {{ form.num_pages }}
                     </div>                    
                     <div class="input-field col s4">
-                        <select>
-                            <option value="" disabled selected>Choose a genre</option>
-                            {% for genre in genres %}
-                            <option value="1">{{genre.genre}}</option>
-                            {% endfor %}
-                        </select>
+                        {{ form.genres.errors }}
+                        {{ form.genres }}
                         <label>Genre</label>
                     </div>
                 </div>                                
-            </form>
+            </div>
         </div>
-    </div>
-    <div class="modal-footer">
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Submit</a>
-    </div>
+        <div class="modal-footer">
+            <!-- <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Submit</a> -->
+            <button type="submit">Submit</button>
+        </div>
+    </form>
 </div>
 
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
