--- a/Store/Templates/Store/layout.html
+++ b/Store/Templates/Store/layout.html
@@ -5,11 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-   UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="{% static "css/materialize.min.css" %}" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="{% static "css/mainstyle.css" %}" type="text/css" rel="stylesheet">
-    <title>Bookstore</title>
+    {% block head %}
+    {% endblock %}
+    <title>Bookish</title>
 </head>
 <nav>
     <div class="nav-wrapper teal">
