--- a/Store/Templates/Store/admin/books/details.html
+++ b/Store/Templates/Store/admin/books/details.html
@@ -1,11 +1,14 @@
-{% extends 'Store/layout.html' %}
-{% load staticfiles %}
-{% load widget_tweaks %}
+{% extends 'Store/layout.html' %} 
+{% load staticfiles %} 
+{% load widget_tweaks %} 
+
+{% block head %}
+{% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col s12">
-        <h3>{{book.title}}</h3> 
+        <h3>{{book.title}}</h3>
     </div>
     <div class="col s6">
         <h1>Image here</h1>
@@ -15,12 +18,13 @@
             <div class="card-content">
                 <!--<span class="card-title">Card Title</span>-->
                 <p>
-                    Author: {{book.author.last_name}}, {{book.author.first_name}}<br>
-                    ISBN10: {{book.isbn10}}<br>
-                    ISBN13: {{book.isbn13}}<br>
-                    Copyright: {{book.copyRightDate}}<br>
+                    Author: {{book.author.last_name}}, {{book.author.first_name}}
+                    <br> ISBN10: {{book.isbn10}}
+                    <br> ISBN13: {{book.isbn13}}
+                    <br> Copyright: {{book.copyRightDate}}
+                    <br>
                 </p>
-            </div>            
+            </div>
             <div class="card-action">
                 <a class="modal-trigger" href="#editbook">Edit</a>
             </div>
@@ -30,20 +34,18 @@
 
 <div id="editbook" class="modal">
     <form method="POST" class="col s12">
-    {% csrf_token %}
-    {{ form.non_field_errors }}            
+        {% csrf_token %} {{ form.non_field_errors }}
         <div class="modal-content">
             <h4>Edit Book</h4>
-            <div class="row">            
+            <div class="row">
                 <div class="row">
                     <div class="input-field col s6">
                         {{ form.title.errors }}
                         <label for="{{ form.title.id_for_label }}">Book Title</label>
-                        {{ form.title }}                        
+                        {{ form.title }}
                     </div>
-                    <div class="input-field col s6">                    
-                        {{ form.authors.errors }}
-                        {{ form.authors }}
+                    <div class="input-field col s6">
+                        {{ form.authors.errors }} {{ form.authors }}
                         <label>Author</label>
                     </div>
                 </div>
@@ -71,8 +73,7 @@
                         {{ form.edition }}
                     </div>
                     <div class="input-field col s4">
-                        {{ form.publishers.errors }}
-                        {{ form.publishers }}
+                        {{ form.publishers.errors }} {{ form.publishers }}
                         <label>Publisher</label>
                     </div>
                 </div>
@@ -86,23 +87,22 @@
                         {{ form.num_pages.errors }}
                         <label for="{{ form.num_pages.id_for_label }}">Number of Pages</label>
                         {{ form.num_pages }}
-                    </div>                    
+                    </div>
                     <div class="input-field col s4">
-                        {{ form.genres.errors }}
-                        {{ form.genres }}
+                        {{ form.genres.errors }} {{ form.genres }}
                         <label>Genre</label>
                     </div>
-                </div>                                
+                </div>
             </div>
         </div>
-        <div class="modal-footer">            
+        <div class="modal-footer">
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-            <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="edit-book" value="{{ book.bookID }}">Submit</button>            
+            <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="edit-book" value="{{ book.bookID }}">Submit</button>
         </div>
     </form>
 </div>
 
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
-<script type="text/javascript" src="{% static "js/books.js" %}"></script>
+<script type="text/javascript" src="{% static "js/books.js" %}"></script> 
 {% endblock %}
