--- a/Store/Templates/Store/layout.html
+++ b/Store/Templates/Store/layout.html
@@ -17,9 +17,13 @@
     <div class="nav-wrapper teal">
     <a href="#" class="brand-logo">Bookish</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="">Login</a></li>
-        <li><a href="">Register</a></li>
-        <li><a href=""></a></li>
+        {% block nav %}
+        {% endblock %}
+        {% if user_id is none %}
+            <li><a href="">Login</a></li>
+        {% else %}
+            <li><a href="">Logout</a></li>
+        {% endif %}              
     </ul>
     </div>
 </nav>
