--- a/Store/Templates/Store/customer/login.html
+++ b/Store/Templates/Store/customer/login.html
@@ -21,10 +21,15 @@
                   {{ form.password }}
               </div>
             </div> <br>
-            <button type="submit"><a href='test'>Submit</a></button>
-            {{text}}
+            <button type="submit" name ='login'>
+              
+              <a href='test'>Submit</a>
+              
+              
+            </button>      
             <div class="card-action">
-                <a class="btn-floating modal-trigger" href="#newcustomer">Register</a>
+                New to Bookish? <br>
+                <a class="waves-effect waves-light btn-small modal-trigger" href="#newcustomer">Create New Account</a>
             </div>
           </div>
         </div>
@@ -68,7 +73,7 @@
       </div> <br>
       {{text}}
   </div>
-  <button type="submit"><a href='customer/test'>Create Account</a></button>
+  <button type="submit" name='create-user'><a href='test'>Create Account</a></button>
 
     </form>
 </div>
