Worked on authentication views

--- a/Store/Templates/Store/login.html
+++ b/Store/Templates/Store/login.html
@@ -36,6 +36,7 @@
   </form>
 </div>
 <div class="row center-align">
+    <p>New to Bookish?</p>
   <a class="waves-effect waves-light modal-trigger btn" href="#newcustomer">Register</a>    
 </div>
 
