--- a/Store/Templates/Store/layout.html
+++ b/Store/Templates/Store/layout.html
@@ -15,12 +15,12 @@
 </head>
 <nav>
     <div class="nav-wrapper teal">
-    <a href="#" class="brand-logo">Bookish</a>
+    <a href="/" class="brand-logo">Bookish</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
         {% block nav %}
         {% endblock %}
         {% if user_id is none %}
-            <li><a href="">Login</a></li>
+            <li><a href="login">Login</a></li>
         {% else %}
             <li><a href="">Logout</a></li>
         {% endif %}              
