--- a/Store/Templates/Store/layout.html
+++ b/Store/Templates/Store/layout.html
@@ -15,7 +15,7 @@
 </head>
 <nav>
     <div class="nav-wrapper teal">
-    <a href="#" class="brand-logo">Bookish</a>
+    <a href="/" class="brand-logo">Bookish</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
         {% block nav %}
         {% endblock %}
