--- a/Store/Templates/Store/admin/books/details.html
+++ b/Store/Templates/Store/admin/books/details.html
@@ -6,23 +6,25 @@
 {% endblock %}
 
 {% block content %}
+<div class="section"></div>
 <div class="row">
-    <div class="col s12">
-        <h3>{{book.title}}</h3>
-    </div>
+    <div class="banner"></div>
     <div class="col s6">
-        <h1>Image here</h1>
+        <img class="materialboxed responsive-img" width="400" src="{{ image_url }}" alt="Image not found">                    
     </div>
     <div class="col s6">
         <div class="card">
             <div class="card-content">
-                <!--<span class="card-title">Card Title</span>-->
+                <span class="card-title">{{ book.title }}</span>
                 <p>
-                    Author: {{book.author.last_name}}, {{book.author.first_name}}
-                    <br> ISBN10: {{book.isbn10}}
-                    <br> ISBN13: {{book.isbn13}}
-                    <br> Copyright: {{book.copyRightDate}}
-                    <br>
+                    by {{ book.author.last_name }}, {{ book.author.first_name }}<br>
+                    {{ book.publisher.company_name }} ({{ book.copyRightDate }})<br>
+                    <br><b>ISBN10:</b>  {{ book.isbn10 }}
+                    <br><b>ISBN13:</b>  {{ book.isbn13 }}<br>
+                    <br><b>Details:</b><br>                    
+                    {{ book.type }}<br>
+                    {{ book.numberOfPages }} pages<br>
+                    {{ book.genre.genre }}                    
                 </p>
             </div>
             <div class="card-action">
@@ -31,65 +33,91 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col s6">
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ image_form.non_field_errors }}
+            <div class="col s11">
+                <div class="file-field input-field">
+                    <div class="btn">
+                        <span>Image</span>
+                        {{ image_form.image.errors }}
+                        {{ image_form.image }}
+                    </div>
+                    <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                    </div>                    
+                </div>
+            </div>
+            <div class="col s1">
+                <button class="btn-floating btn-medium" type="submit" name="add-image">
+                    <i class="large material-icons">file_upload</i>
+                </button>               
+            </div>
+        </form>
+    </div>
+</div>
 
 <div id="editbook" class="modal">
     <form method="POST" class="col s12">
-        {% csrf_token %} {{ form.non_field_errors }}
+        {% csrf_token %} 
+        {{ book_form.non_field_errors }}
         <div class="modal-content">
             <h4>Edit Book</h4>
             <div class="row">
                 <div class="row">
                     <div class="input-field col s6">
-                        {{ form.title.errors }}
-                        <label for="{{ form.title.id_for_label }}">Book Title</label>
-                        {{ form.title }}
+                        {{ book_form.title.errors }}
+                        <label for="{{ book_form.title.id_for_label }}">Book Title</label>
+                        {{ book_form.title }}
                     </div>
                     <div class="input-field col s6">
-                        {{ form.authors.errors }} {{ form.authors }}
+                        {{ book_form.authors.errors }} {{ book_form.authors }}
                         <label>Author</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        {{ form.isbn10.errors }}
-                        <label for="{{ form.isbn10.id_for_label }}">ISBN10</label>
-                        {{ form.isbn10 }}
+                        {{ book_form.isbn10.errors }}
+                        <label for="{{ book_form.isbn10.id_for_label }}">ISBN10</label>
+                        {{ book_form.isbn10 }}
                     </div>
                     <div class="input-field col s6">
-                        {{ form.isbn13.errors }}
-                        <label for="{{ form.isbn13.id_for_label }}">ISBN13</label>
-                        {{ form.isbn13 }}
+                        {{ book_form.isbn13.errors }}
+                        <label for="{{ book_form.isbn13.id_for_label }}">ISBN13</label>
+                        {{ book_form.isbn13 }}
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s4">
-                        {{ form.copyright_date.errors }}
-                        <label for="{{ form.copyright_date.id_for_label }}">Copyright Date</label>
-                        {{ form.copyright_date|add_class:"datepicker" }}
+                        {{ book_form.copyright_date.errors }}
+                        <label for="{{ book_form.copyright_date.id_for_label }}">Copyright Date</label>
+                        {{ book_form.copyright_date|add_class:"datepicker" }}
                     </div>
                     <div class="input-field col s4">
-                        {{ form.edition.errors }}
-                        <label for="{{ form.edition.id_for_label }}">Edition</label>
-                        {{ form.edition }}
+                        {{ book_form.edition.errors }}
+                        <label for="{{ book_form.edition.id_for_label }}">Edition</label>
+                        {{ book_form.edition }}
                     </div>
                     <div class="input-field col s4">
-                        {{ form.publishers.errors }} {{ form.publishers }}
+                        {{ book_form.publishers.errors }} {{ book_form.publishers }}
                         <label>Publisher</label>
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-field col s4">
-                        {{ form.book_type.errors }}
-                        <label for="{{ form.book_type.id_for_label }}">Book Type</label>
-                        {{ form.book_type }}
+                        {{ book_form.book_type.errors }}
+                        <label for="{{ book_form.book_type.id_for_label }}">Book Type</label>
+                        {{ book_form.book_type }}
                     </div>
                     <div class="input-field col s4">
-                        {{ form.num_pages.errors }}
-                        <label for="{{ form.num_pages.id_for_label }}">Number of Pages</label>
-                        {{ form.num_pages }}
+                        {{ book_form.num_pages.errors }}
+                        <label for="{{ book_form.num_pages.id_for_label }}">Number of Pages</label>
+                        {{ book_form.num_pages }}
                     </div>
                     <div class="input-field col s4">
-                        {{ form.genres.errors }} {{ form.genres }}
+                        {{ book_form.genres.errors }} {{ book_form.genres }}
                         <label>Genre</label>
                     </div>
                 </div>
@@ -97,10 +125,11 @@
         </div>
         <div class="modal-footer">
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
-            <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="edit-book" value="{{ book.bookID }}">Submit</button>
+            <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="update-book" value="{{ book.bookID }}">Submit</button>
         </div>
     </form>
 </div>
+{{ notification }}
 
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
