--- a/Store/Templates/Store/customer/customeraccount.html
+++ b/Store/Templates/Store/customer/customeraccount.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-    <h1> Welcome {{user_id}} </h1>
+    <h1> Welcome {{username}} {{user_id}} </h1>
    <h1> Customer stuff</h1>
 
 {% endblock %}
