--- a/Store/Templates/Store/customer/books/books.html
+++ b/Store/Templates/Store/customer/books/books.html
@@ -21,7 +21,7 @@
             {% csrf_token %}
             {% for book in books %}
             <tr>
-                <td><a href="books/details/{{ book.bookID }}">{{ book.title }}</a></td>  
+                <td><a href="books/details/{{ book.book_id }}">{{ book.title }}</a></td>  
                 <td>{{book.author.last_name}}, {{book.author.first_name}}</td>
                 <td>{{book.publisher.company_name}}</td>                                
             </tr>
