--- a/Store/Templates/Store/admin/books/details.html
+++ b/Store/Templates/Store/admin/books/details.html
@@ -10,7 +10,11 @@
 <div class="row">
     <div class="banner"></div>
     <div class="col s6">
-        <img class="materialboxed responsive-img" width="400" src="{{ image_url }}" alt="Image not found">                    
+        <div class="carousel">
+            {% for image in images %}
+            <a class="carousel-item" href="#one!"><img src="{{ image.image_url }}"></a>                  
+            {% endfor %}
+        </div>
     </div>
     <div class="col s6">
         <div class="card">
