--- a/Store/Templates/Store/admin/customers/details.html
+++ b/Store/Templates/Store/admin/customers/details.html
@@ -15,7 +15,7 @@
             </p>
             </div>
             <div class="card-action">
-                    <a href="#">{% if customer.user.is_active == 1 %} Desctivate{% else %} Activate{% endif %}</a>
+                    <a href="#">{% if customer.user.is_active == 1 %} Deactivate{% else %} Activate{% endif %}</a>
                    
                   </div>
           </div>
