--- a/Store/Templates/Store/customer/customeraccount.html
+++ b/Store/Templates/Store/customer/customeraccount.html
@@ -37,7 +37,7 @@
   <div class="col s12 m6">
         <div class="card">
             <div class="card-content">
-                <span class="card-title">Customer Address Information</span>
+                <span class="card-title"><b>Customer Address Information</b></span>
                 <table>
                         <tr>
                         <thead>
@@ -49,12 +49,16 @@
                           <tr>
                               <td>{{ca.street}} {{ca.city}}, {{ca.state_code}} {{ca.zip_code}}</td>
                               <td>{{ca.address_type}} </td>
-                              <td><a class="modal-trigger " href='#editAddress'><i class=" tiny material-icons">edit</i></a></td>
+                              <td><a class="modal-trigger " href='#editAddress{{ca.address_id}}'><i class=" tiny material-icons">edit</i></a></td>
                               <td><a class="modal-trigger " href='#deleteAddress{{ca.address_id}}'><i class=" tiny material-icons">close</i></a></td>
                           </tr>
                         {% endfor %}
                   </table>    
-            </div>        
+               
+            <div class="card-action">
+                    <a class="modal-trigger btn " href="#addAddress"><i class=" material-icons">add_box</i></a>
+                  </div>     
+                  </div>       
         </div>
     </div>
 </div>
@@ -108,14 +112,13 @@
   <div id="deleteAddress{{ca.address_id}}" class="modal">
     <form method="POST" class="col s6" >
         {% csrf_token %} 
-       
+        {{ daddress.non_field_errors }}
         <div class="modal-content">
             <h3>Confirm Address Delete</h3>
-            <div class="input-field col s6">
-                    {{ daddress.address_id.errors }}
-                    <label for="{{ daddress.address_id.errors_for_label }}"></label>
-                    {{ daddress.address_id.errors }}
-                    {{ca.address_id}}
+            <div class="input-field  col s6">
+                {{daddress.address_id.errors}}
+                    <input type="hidden" name="address_id" value="{{ca.address_id}}">
+                    {{daddress.address_id.errors}}
                 </div>
             <h4>
             <ul>
@@ -132,6 +135,91 @@
     </form>
   </div>
   {% endfor %}
+  {% for ca in caddress %}
+    <div id="editAddress{{ca.address_id}}" class="modal">
+        <form request="POST" class="col s6" >
+        {% csrf_token %} 
+        {{ eaddress.non_field_errors }}
+        <div class="modal-content">
+            <h3> Edit Address:</h3>
+            <h6>
+                <ul>
+                    <li> {{ca.street}}</li>
+                    <li> {{ca.city}}, {{ca.state_code}} {{ca.zip_code}}</li>
+                    <li>Address Type: {{ca.address_type}}</li>
+                </ul>
+            </h6>
+                <div class="input-field col s6">
+                    {{ eaddress.street.errors }}
+                    <label for="{{ eaddress.street.id_for_label }}">Street</label>
+                    {{ eaddress.street }}
+                </div>
+                <div class="input-field col s6">
+                    {{ eaddress.city.errors }}
+                    <label for="{{ eaddress.city.id_for_label }}">City</label>
+                    {{ eaddress.city }}
+                </div>
+                <div class="input-field col s6">
+                    {{ eaddress.state_code.errors }}                        
+                    {{ eaddress.state_code }}
+                    <label>State</label>       
+                </div>
+                <div class="input-field col s6">
+                    {{ eaddress.zip_code.errors }}
+                    <label for="{{ eaddress.zip_code.id_for_label }}">Zip Code</label>
+                    {{ eaddress.zip_code }}       
+                </div>
+                <div class="input-field col s6">
+                        {{ eaddress.address_type.errors }}
+                        {{ eaddress.address_type }}    
+                        <label>Address Type</label>   
+                </div>
+        </div>
+    <div class="modal-footer">
+        <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+        <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="edit-address" value="{{ ca.address_id}}">Edit</button>
+    </div>
+</form>
+</div>
+  {% endfor %}
+  <div id="addAddress" class="modal">
+        <form method="POST" class="col s12">
+            {% csrf_token %} 
+            {{ aaddress.non_field_errors }}
+            <div class="modal-content">
+                <div class="input-field col s6">
+                    {{ aaddress.street.errors }}
+                    <label for="{{ aaddress.street.id_for_label }}">Street</label>
+                    {{ aaddress.street }}
+                </div>
+                <div class="input-field col s6">
+                    {{ aaddress.city.errors }}
+                    <label for="{{ aaddress.city.id_for_label }}">City</label>
+                    {{ aaddress.city }}
+                </div>
+                <div class="input-field col s6">
+                    {{ aaddress.state_code.errors }}                        
+                    {{ aaddress.state_code }}
+                    <label>State</label>       
+                </div>
+                <div class="input-field col s6">
+                    {{ aaddress.zip_code.errors }}
+                    <label for="{{ aaddress.zip_code.id_for_label }}">Zip Code</label>
+                    {{ aaddress.zip_code }}       
+                </div>
+                <div class="input-field col s6">
+                    {{ aaddress.address_type.errors }}
+                    {{ aaddress.address_type }}    
+                    <label>Address Type</label>   
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cancel</a>
+                <button type="submit" class="modal-action waves-effect waves-green btn-flat" name="add-address" value="{{ ca.address_id}}">Add</button>
+            </div>
+        </form>
+  </div>
+
 <script type="text/javascript" src="{% static "js/jquery-3.3.1.js" %}"></script>
 <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
 <script type="text/javascript" src="{% static "js/books.js" %}"></script> 
