--- a/Store/Templates/Store/customer/customeraccount.html
+++ b/Store/Templates/Store/customer/customeraccount.html
@@ -20,7 +20,7 @@
       <div class="col s6">
           <div class="card">
               <div class="card-content">
-                  <span class="card-title"><b>General Customer Information</b></span>
+                  <span class="card-title"><b>General Information</b></span>
                     <ul>
                         <li><b>Name:</b> {{customer.user.first_name}} {{customer.user.last_name}}</li>
                         <li><b>E-mail:</b> {{customer.user.email}} </li>
@@ -34,10 +34,11 @@
           </div>
       </div>
   </div>
+  <div class="row">
   <div class="col s12 m6">
         <div class="card">
             <div class="card-content">
-                <span class="card-title"><b>Customer Address Information</b></span>
+                <span class="card-title"><b> Address Information</b></span>
                 <table>
                         <tr>
                         <thead>
@@ -54,14 +55,40 @@
                           </tr>
                         {% endfor %}
                   </table>    
-               
-            <div class="card-action">
+                <div class="card-action">
                     <a class="modal-trigger btn " href="#addAddress"><i class=" material-icons">add_box</i></a>
                   </div>     
-                  </div>       
+            </div>       
         </div>
     </div>
+    <div class="col s12 m6">
+            <div class="card">
+                <div class="card-content">
+                    <span class="card-title"><b>Payment Information</b></span>
+                    <table>
+                            <tr>
+                            <thead>
+                                  <td>Address</td>
+                                  <td>Address Type</td>
+                            </thead> 
+                          </tr>
+                            {% for ca in caddress %}
+                              <tr>
+                                  <td>{{ca.street}} {{ca.city}}, {{ca.state_code}} {{ca.zip_code}}</td>
+                                  <td>{{ca.address_type}} </td>
+                                  <td><a class="modal-trigger " href='#editAddress{{ca.address_id}}'><i class=" tiny material-icons">edit</i></a></td>
+                                  <td><a class="modal-trigger " href='#deleteAddress{{ca.address_id}}'><i class=" tiny material-icons">close</i></a></td>
+                              </tr>
+                            {% endfor %}
+                      </table>    
+                    <div class="card-action">
+                        <a class="modal-trigger btn " href="#addAddress"><i class=" material-icons">add_box</i></a>
+                      </div>     
+                </div>       
+            </div>
+        </div>
 </div>
+
   <div id="editinfo" class="modal">
       <form method="POST" class="col s12">
           {% csrf_token %} 
