--- a/Store/Templates/Store/admin/books/details.html
+++ b/Store/Templates/Store/admin/books/details.html
@@ -18,8 +18,17 @@
     </div>
     <div class="col s6">
         <div class="card">
-            <div class="card-content">
-                <span class="card-title">{{ book.title }}</span>
+            <div class="card-content">            
+                <div class="row">
+                    <div class="col s12">
+                        <span class="card-title">{{ book.title }}</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        ${{ inventory.retail_price }} / ${{ inventory.cost }}
+                    </div>
+                </div>
                 <p>
                     by {{ book.author.last_name }}, {{ book.author.first_name }}<br>
                     {{ book.publisher.company_name }} ({{ book.copyRightDate }})<br>
