--- a/Store/Templates/Store/customer/cart.html
+++ b/Store/Templates/Store/customer/cart.html
@@ -1,26 +1,51 @@
-{% extends 'Store/layout.html' %}
-{% load staticfiles %}
-{% load widget_tweaks %}
+{% extends 'Store/layout.html' %} 
+{% load staticfiles %} 
+{% load widget_tweaks %} 
 
 {% block content %}
-<h4>Shopping Cart</h4>
-<table>
-    <thead>
-        <tr>
-            <th>Book</th>
-            <th>Author</th>
-            <th>Publisher</th>                        
-        </tr>
-    </thead>
-    <tbody>    
-        {% for item in cart_items %}
-        <tr>
-            <td><a href="books/details/{{ item.book.book_id }}">{{ item.book.title }}</a></td>  
-            <td>{{ item.book.author.author_id }}</td>
-            <td>{{ item.book.publisher.publisher_id }}</td>                                
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-{{loggedin_user_id}}
+<div class="section"></div>
+<div class="row">
+    <div class="col s6">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">
+                    Shopping Cart
+                </span>
+                <table> 
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                    </thead>    
+                    <tbody>
+                        {% if cart_items %}
+                        {% for item in cart_items %}
+                        <tr>
+                            <td><a href="{% url 'customer_book' book_id=item.book.book_id %}">{{ item.book.title }}</a></td>
+                            <td>${{ item.book.inventory.retail_price }}</td>
+                            <td><i class="material-icons">delete</i></td>
+                        </tr>                                                                                                                                     
+                        {% endfor %}
+                        {% else %}
+                            <h5>No books are in your cart</h5>
+                        {% endif %}
+                    </tbody>                                   
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="col s6">
+        <div class="row">
+            <h5>Thank you for shopping with us!</h5>
+            <h6>Cart total: ${{ cart_total }}</h6>
+        </div>
+        <div class="row">        
+            <button class="btn">
+                Check out
+            </button>
+        </div>
+    </div>
+</div>
 {% endblock %}
